--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@
 							<h1>About</h1>
 						</header>
 						<div class="content">
-							<p>The IGAP Awareness Campaign was initiated to advocate for the Intersectoral Action Plan for Epilepsy
-							and Other Neurological Disorders (IGAP) 2022-2031.</p>						</div>
+							<p>The IGAP Awareness Campaign was initiated to advocate for the Global Intersectoral Action Plan for Epilepsy
+							and Other Neurological Disorders (IGAP) 2022-2031.</p>						
+						</div>
 					</div>
 				</section>
 
@@ -87,10 +88,10 @@
 									families, creating a platform for a national, international and global exchange of information.</li>
 									<li>This will be by collecting essential data required to not only identity but most importantly
 									implement the necessary policy changes.</li>
-									<li>To improve the social, health economic conditions and quality of life of persons living with these
-									neurological disorders also those affected by them.</li>
+									<li>To improve the social, health, economic conditions and quality of life of persons living with these
+									neurological disorders and those affected by them.</li>
 									<li>Much of this work will be accomplished through advocates in various regions and countries
-									across the world especially in LMIC's and others.</li>
+									across the world especially in Low Middle Income Countries (LMIC) and others.</li>
 									<li>This goal will only be achieved by collaborating and working together with 1 voice for neurological
 									disorders.</li>
 									</ul>
