--- a/disorders.html
+++ b/disorders.html
@@ -29,13 +29,13 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
 							<li><a href="about.html">About us</a></li>
-							<li><a href="#">Contact us</a></li>
-							<li><a href="#">Get Involved</a></li>
+							<li><a href="contact.html">Contact us</a></li>
+							<li><a href="help.html">Get Involved</a></li>
 							<li><a href="disorders.html">Neurological Disorders</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">FAQ</a></li>
+							<li><a href="resources.html">Resources</a></li>
+							<li><a href="faq.html">FAQ</a></li>
 							<li><a href="surveys.html">Survey</a></li>
-							<li><a href="#">Your Stories</a></li> 
+							<li><a href="stories.html">Your Stories</a></li> 
 						</ul>
 					</nav>
 
