--- a/faq.html
+++ b/faq.html
@@ -44,15 +44,14 @@
 				<section id="banner" class="style5">
 					<div class="inner">
 						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
+							<img src="images/pic09.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h1>Surveys</h1>
+							<h1>Frequently Asked Questions</h1>
 						</header>
 						<div class="content">
-							<p>										
-								THE PURPOSE OF THESE SURVEYS CONDUCTED IS TO DETERMINE THE EXPERIENCES OF PERSONS LIVING WITH EPILEPSY AND OTHER NEUROLOGICAL DISORDERS. THIS WILL INCLUDE  FOR PERSONS AFFECTED BY NEUROLOGICAL DISORDERS							</p>						
-						</div>
+							<p>The IGAP Awareness Campaign was initiated to advocate for the Global Intersectoral Action Plan for Epilepsy
+							and Other Neurological Disorders (IGAP) 2022-2031.</p>						</div>
 					</div>
 				</section>
 
@@ -63,26 +62,48 @@
 							<section id="one">
 								<div class="inner">
 
-									<blockquote>
-										Your <em>participation in these surveys is entirely voluntary</em> and you may withdraw at any time.<br/>This research survey is being conducted in conjunction with IBE, ILAE and other supporting contributors in the field of neurological disorders.
-									</blockquote>
-
-									<h2>Health</h2>
+									<h2>FAQ</h2>
 
 									<p>
-										<a href="https://docs.google.com/forms/d/11o0p9E3LTCY2du-kIMokgsNksWc0fO7EiERvLoejbnQ/viewform?edit_requested=true" target="_blank">Participate in the Health Survey</a>
+									<em>What does a Neurologist Treat?</em><br/>
+									Neurologists treat disorders of the nervous system, brain, spinal cord, nerves and muscles.
 									</p>
 
-									<h2>Social</h2>
 									<p>
-										<a href="https://docs.google.com/forms/d/1JIyN-dVaE-7U2h01BI9EycBiYTn7SjsKDotRTQ9_hNY/viewform?edit_requested=true" target="_blank">Participate in the Social Survey</a>
+									<em>What does a Neurosurgeon Treat?</em><br/>
+									A neurosurgeon also treats disorders of the nervous system, brain, spinal cord, nerves and muscles, using surgical techniques in conjunction with non-surgical practices.
 									</p>
 
-
-									<h2>Economic</h2>
 									<p>
-										<a href="https://docs.google.com/forms/d/1xmp-dAevZ7DAlURMDzx_9zIULXs56Zp7V7oGLzoSWFk/viewform?edit_requested=true" target="_blank">Participate in the Economic Survey</a>
+									<em>What are Neurological Disorders?</em><br/>
+									Neurological disorders are diseases of the brain, spine and nerves; there are more than 600 diseases of the nervous system, such as brain tumors, epilepsy, Alzheimer’s disease, Parkinson's disease and stroke
 									</p>
+								
+									<p>
+									<em>How do you Treat Neurological Disorders?</em><br/>
+									The treatment is different for each condition. To discover the appropriate treatment options, neurologists will perform and interpret tests of your brain and nervous system.
+									</p>
+
+									<p>
+									<em>What is a Neurological Examination Like?</em><br/>
+									Your neurologist will review your patient health history, paying special attention to the condition that you are currently experiencing. Then you will have an examination, which typically tests your vision, strength, coordination, memory, reasoning and puzzle-solving abilities, reflexes and ability to feel physical objects, smell odors and hear sounds. The results of your test will help your neurologist determine if your problem stems from the brain or nervous system. You may need further tests to confirm a diagnosis or determine which treatment is best for you.
+									</p>
+
+									<p>
+									<em>How are neurological disorders treated?</em><br/>
+									Many disorders can be treated. Treatment or symptomatic relief is different for each condition. To find treatment options, neurologists will perform and interpret tests of the brain or nervous system. Treatment can help patients with neurological disorders maintain the best possible quality of life.
+									</p>
+
+									<p>
+									<em>What is a neurological examination?</em><br/>
+									During a neurological examination, the neurologist reviews the patient’s health history with special attention to the current condition. The patient then takes a neurological exam. Typically, the exam tests vision, strength, coordination, reflexes and sensation. This information helps the neurologist determine if the problem is in the nervous system. Further tests may be needed to confirm a diagnosis or to find a specific treatment.
+									</p>
+
+									<p>
+									<em>Why do patients need a neurological examination?</em><br/>
+									An examination is used when a family doctor seeks a specialized opinion about a patient whose symptoms may involve the brain or nervous system. The examination may also be performed when a patient wants a second opinion from a neurologist. The neurologist’s expertise in disorders of the brain and nervous system can give patient’s effective diagnosis and treatment for neurological disorders.
+									</p>
+
 								</div>
 							</section>
 
