--- a/landing.html
+++ b/landing.html
@@ -29,19 +29,19 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
 							<li><a href="about.html">About us</a></li>
-							<li><a href="#">Contact us</a></li>
-							<li><a href="#">Get Involved</a></li>
+							<li><a href="contact.html">Contact us</a></li>
+							<li><a href="help.html">Get Involved</a></li>
 							<li><a href="disorders.html">Neurological Disorders</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">FAQ</a></li>
+							<li><a href="resources.html">Resources</a></li>
+							<li><a href="faq.html">FAQ</a></li>
 							<li><a href="surveys.html">Survey</a></li>
-							<li><a href="#">Your Stories</a></li> 
+							<li><a href="stories.html">Your Stories</a></li> 
 						</ul>
 					</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
+					<section id="banner" class="style7">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic07.jpg" alt="" />
@@ -50,7 +50,7 @@
 								<h1>IGAP's 10 Year Goal</h1>
 							</header>
 							<div class="content">
-								<p>The Intersectoral Global Action Plan on Epilepsy and Other Neurological Disorders 2022-2031 (IGAP) was adopted at the WHO's World Health Assembly in 2022.  </p>
+								<p>The Intersectoral Global Action Plan on Epilepsy and Other Neurological Disorders 2022-2031 (<a href="https://www.who.int/publications/i/item/9789240076624" target="_blank">IGAP</a>) was adopted at the WHO's World Health Assembly in 2022.  </p>
 							</div>
 						</div>
 					</section>
@@ -105,7 +105,7 @@
 												<h3>How is IGAP relevant to you? </h3>
 											</header>
 											<p>IGAP speaks directly to the mission, needs, and aspirations of the global epilepsy
-												community. It is therefore a powerful tool to support, guide, and promote our
+												and neurological community. It is therefore a powerful tool to support, guide, and promote our
 												work moving forward. In this practical guide, we outline a series of proposed
 												actions to support IBE chapters and our community in optimally leveraging IGAP.</p>
 											<ul class="actions">
