--- a/resources.html
+++ b/resources.html
@@ -44,15 +44,14 @@
 				<section id="banner" class="style5">
 					<div class="inner">
 						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
+							<img src="images/pic08.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h1>Surveys</h1>
+							<h1>Resources</h1>
 						</header>
 						<div class="content">
-							<p>										
-								THE PURPOSE OF THESE SURVEYS CONDUCTED IS TO DETERMINE THE EXPERIENCES OF PERSONS LIVING WITH EPILEPSY AND OTHER NEUROLOGICAL DISORDERS. THIS WILL INCLUDE  FOR PERSONS AFFECTED BY NEUROLOGICAL DISORDERS							</p>						
-						</div>
+							<p>The IGAP Awareness Campaign was initiated to advocate for the Global Intersectoral Action Plan for Epilepsy
+							and Other Neurological Disorders (IGAP) 2022-2031.</p>						</div>
 					</div>
 				</section>
 
@@ -63,26 +62,17 @@
 							<section id="one">
 								<div class="inner">
 
-									<blockquote>
-										Your <em>participation in these surveys is entirely voluntary</em> and you may withdraw at any time.<br/>This research survey is being conducted in conjunction with IBE, ILAE and other supporting contributors in the field of neurological disorders.
-									</blockquote>
-
-									<h2>Health</h2>
-
-									<p>
-										<a href="https://docs.google.com/forms/d/11o0p9E3LTCY2du-kIMokgsNksWc0fO7EiERvLoejbnQ/viewform?edit_requested=true" target="_blank">Participate in the Health Survey</a>
-									</p>
-
-									<h2>Social</h2>
-									<p>
-										<a href="https://docs.google.com/forms/d/1JIyN-dVaE-7U2h01BI9EycBiYTn7SjsKDotRTQ9_hNY/viewform?edit_requested=true" target="_blank">Participate in the Social Survey</a>
-									</p>
-
-
-									<h2>Economic</h2>
-									<p>
-										<a href="https://docs.google.com/forms/d/1xmp-dAevZ7DAlURMDzx_9zIULXs56Zp7V7oGLzoSWFk/viewform?edit_requested=true" target="_blank">Participate in the Economic Survey</a>
-									</p>
+									<h2>Resource by Region</h2>
+									
+									<ul>
+										<li>Africa </li>
+										<li>North America</li>
+										<li>Latin America</li>
+										<li>Europe</li>
+										<li>South East Asia</li>
+										<li>Western Pacific</li>
+										<li>Eastern Mediterranean </li>
+									</ul>
 								</div>
 							</section>
 
