--- a/stories.html
+++ b/stories.html
@@ -47,11 +47,10 @@
 							<img src="images/pic05.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h1>Surveys</h1>
+							<h1>Stories</h1>
 						</header>
 						<div class="content">
-							<p>										
-								THE PURPOSE OF THESE SURVEYS CONDUCTED IS TO DETERMINE THE EXPERIENCES OF PERSONS LIVING WITH EPILEPSY AND OTHER NEUROLOGICAL DISORDERS. THIS WILL INCLUDE  FOR PERSONS AFFECTED BY NEUROLOGICAL DISORDERS							</p>						
+							<p>Real stories from reall people will encourage others to speak out and to know that you are not alone and have a global neurological community who face these challenges daily</p>							
 						</div>
 					</div>
 				</section>
@@ -63,26 +62,11 @@
 							<section id="one">
 								<div class="inner">
 
-									<blockquote>
-										Your <em>participation in these surveys is entirely voluntary</em> and you may withdraw at any time.<br/>This research survey is being conducted in conjunction with IBE, ILAE and other supporting contributors in the field of neurological disorders.
-									</blockquote>
+									<h2>Real People</h2>
 
-									<h2>Health</h2>
+									<blockquote>We will feature a series of Lived Experiences shared by those With and Affected by Neurological Disorders. </blockquote>
+									<p>Your story will encourage others to speak out and to know that you are not alone and have a global neurological community who face these challenges daily. The goal is to promote this platform in bringing awareness to neurological disorders globally.</p>
 
-									<p>
-										<a href="https://docs.google.com/forms/d/11o0p9E3LTCY2du-kIMokgsNksWc0fO7EiERvLoejbnQ/viewform?edit_requested=true" target="_blank">Participate in the Health Survey</a>
-									</p>
-
-									<h2>Social</h2>
-									<p>
-										<a href="https://docs.google.com/forms/d/1JIyN-dVaE-7U2h01BI9EycBiYTn7SjsKDotRTQ9_hNY/viewform?edit_requested=true" target="_blank">Participate in the Social Survey</a>
-									</p>
-
-
-									<h2>Economic</h2>
-									<p>
-										<a href="https://docs.google.com/forms/d/1xmp-dAevZ7DAlURMDzx_9zIULXs56Zp7V7oGLzoSWFk/viewform?edit_requested=true" target="_blank">Participate in the Economic Survey</a>
-									</p>
 								</div>
 							</section>
 
