--- a/disorders.html
+++ b/disorders.html
@@ -75,7 +75,7 @@
 										<li><a href="https://www.mayoclinic.org/diseases-conditions/autism-spectrum-disorder/symptoms-causes/syc-20352928" target="_blank">Autism spectrum disorder</a></li>
 										<li><a href="https://www.mayoclinic.org/diseases-conditions/alzheimers-disease/symptoms-causes/syc-20350447" target="_blank">Alzheimer's disease</a></li>
 										<li><a href="https://www.mayoclinic.org/diseases-conditions/cerebral-palsy/symptoms-causes/syc-20353999" target="_blank">Cerebral palsy</a></li>
-										<li><a href="https://www.nhs.uk/conditions/motor-neurone-disease/">M.N.D (Motor Neurone Disease)</a> </li>
+										<li><a href="https://www.nhs.uk/conditions/motor-neurone-disease/" target="_blank">M.N.D (Motor Neurone Disease)</a> </li>
 									</ul>
 								</div>
 							</section>
