--- a/stories.html
+++ b/stories.html
@@ -48,7 +48,7 @@
 							<h1>Stories</h1>
 						</header>
 						<div class="content">
-							<p>Lived stories of from reall people will encourage others to speak out and to know that you are not alone and have a global neurological community who face these challenges daily</p>							
+							<p>Lived stories of from real people will encourage others to speak out and to know that you are not alone and have a global neurological community who face these challenges daily</p>							
 						</div>
 					</div>
 				</section>
